--- a/style.css
+++ b/style.css
@@ -3,69 +3,152 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Rubik", sans-serif;
-  background-color: #eef0f4;
+  background-color: #222c34;
   user-select: none;
+}
+
+h1 {
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+  color: #fff;
+  margin-top: 0;
+}
+h2 {
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+  color: #fff;
+  margin-top: 50px;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  max-width: 320px;
+  justify-content: center;
+  align-items: center;
+  max-width: 480px;
   margin: 30px auto;
 }
 
 img {
   width: 150px;
-  margin: 0 auto;
+  margin-bottom: 30px;
 }
 
+#input-text,
 input {
-  color: #432000;
-  background-color: #dce1eb;
-  border: 0;
+  color: #333;
+  background-color: #fff;
+  border: 1px solid #ddd;
   padding: 15px;
   border-radius: 8px;
   font-size: 20px;
   text-align: center;
   font-family: "Rubik", sans-serif;
   margin: 10px 0;
+  width: 100%;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+textarea {
+  resize: none;
+  width: 100%;
+  height: 150px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+  font-size: 20px;
+  font-family: "Rubik", sans-serif;
 }
 
 button {
-  color: #fdfdfd;
-  background-color: #ac485a;
+  color: #fff;
+  background-color: #3a6c87;
   border: 0;
   padding: 15px;
   border-radius: 8px;
   font-size: 20px;
   text-align: center;
   font-family: "Rubik", sans-serif;
+  width: 100%;
+  margin-top: 10px;
 }
 
 button:hover {
-  background-color: #432000;
+  background-color: #2dbca4;
   cursor: pointer;
 }
 
-ul {
-  list-style-type: none;
-  padding: 0;
+.endorsement-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 20px;
+  margin-top: 30px;
 }
 
-ul li {
+.endorsement-container {
+  display: flex;
+  flex-direction: column;
   font-size: 20px;
-  background-color: #fffdf8;
+  background-color: #fff;
+  border: 1px solid #ddd;
   padding: 15px;
   border-radius: 8px;
   flex-grow: 1;
-  text-align: center;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+  margin-top: 10px;
 }
 
-ul li:hover {
-  background-color: #ffecc7;
+.endorsement-item__text {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  color: #333;
+  font-style: italic;
+}
+
+.endorsement-item__from,
+.endorsement-item__to,
+.endorsement-item__likes,
+.endorsement-item__date {
+  font-size: 12px;
+  color: #333;
+}
+
+.endorsement-item__from::before {
+  content: "From: ";
+}
+
+.endorsement-item__to::before {
+  content: "To: ";
+}
+
+.endorsement-footer {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin-top: 10px;
+}
+
+.endorsement-item__likes {
+  margin-top: auto;
+  margin-left: auto;
+  color: #333;
+  display: flex;
+  gap: 5px;
+  align-items: center;
   cursor: pointer;
+}
+
+.endorsement-item__date {
+  margin-top: auto;
+  margin-left: 0;
+  color: #333;
+  display: flex;
+  gap: 5px;
+  align-items: center;
 }
